rm intellij warnings